--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 body {
   font-family: Arial, sans-serif;
   text-align: center;
@@ -24,4 +25,28 @@ body {
 }
 .playbox:hover {
   background-color: #f4ff5c;
+}
+.modal {
+display: none;
+position: fixed;
+
+width: 100vw;
+height: 100vw;
+background-color: rgba(47, 0, 255, 1);
+text-align: center;
+}
+
+.modalContent {
+  display: inline-block;
+  padding: 5vw;
+  margin:20vw auto;
+  border-radius: 2vw;
+  min-width: 40vw;
+}
+
+.close {
+  float: right;
+  font-size: 4vw;
+  cursor: pointer;
+
 }
