--- a/style.css
+++ b/style.css
@@ -26,9 +26,12 @@ body {
 .playbox:hover {
   background-color: #f4ff5c;
 }
+
 .modal {
-display: none;
-position: fixed;
+display:none;  
+position: absolute;
+top: 10vh;
+z-index: 10;
 
 width: 100vw;
 height: 100vw;
